# omniflux

./: .gitignore  docker-compose.yml  readme.md
.github/workflows/: build-api.yml
apps/api/: .dockerignore  .env  Cargo.toml  Dockerfile  compiler_errors.txt
apps/api/migration/src/: m20220101_000001_create_table.rs
apps/api/src/: lib.rs  main.rs
apps/api/src/config/: db.rs
apps/api/src/controllers/: asset_controller.rs  category_controller.rs  insight_controller.rs  mod.rs  portfolio_controller.rs  transaction_controller.rs  user_controller.rs  wallet_controller.rs
apps/api/src/data/: cryptocurrency.csv  saham_idx.csv
apps/api/src/dto/: api_response.rs  mod.rs  portfolio_dto.rs  transaction_dto.rs  user_dto.rs  wallet_dto.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: asset.rs  category.rs  insight.rs  investment_transaction.rs  mod.rs  portfolio.rs  prelude.rs  sea_orm_active_enums.rs  transaction.rs  user.rs  wallet.rs
apps/api/src/routes/: asset_route.rs  category_route.rs  insight_route.rs  mod.rs  portfolio_route.rs  transaction_route.rs  user_route.rs  wallet_route.rs
apps/api/src/services/: asset_service.rs  category_service.rs  insight_service.rs  mod.rs  portfolio_service.rs  transaction_service.rs  user_service.rs  wallet_service.rs
apps/api/src/utils/: category_seeder.rs  crypto_seeder.rs  gold_seeder.rs  idx_stock_seeder.rs  mod.rs  usd_seeder.rs  usd_to_idr_convert.rs  user_seeder.rs
apps/api/tests/: e2e_tests.rs  transaction_tests.rs
apps/mobile/: app.json  package-lock.json  package.json  tailwind.config.js
(+27 files in other folders)
