[workspace]
members=[".", "migration"]

[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
