[workspace]
members=[".", "migration"]

[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
yahoo_finance_api = "4.1.0"
